--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,7 @@
 
   --text-color-pri: #FFF;
   --text-color-sec: #000;
+  --text-color-tec: #89B4FA;
 
   --text-color-box-pri: #D9D9D9; 
   --text-color-box-sec: #878787;
@@ -36,3 +37,48 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: var(--bg-color-pri);
+  min-height: 100vh;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: var(--font-mono);
+  color: var(--text-color-tec);  
+  background-color: var(--bg-color-sec);
+  margin: 2rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 4rem);
+  border-radius: 8px;  
+}
+
+header {
+  display: flex;
+  justify-content: flex-end;
+  align-item: center;
+  padding-bottom: 1rem;
+  position: relative;
+  z-index: 100;
+}
+
+.github-icon a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease;
+}
+
+.github-icon a:hover { transform: scale(1.1); }
+
+.github-icon a:focus {
+    outline: 2px solid var(--bg-color-pri);
+    outline-offset: 4px;
+    border-radius: 50%;
+}
+
+main {
+  
+}
