--- a/src/css/lesson.css
+++ b/src/css/lesson.css
@@ -1,6 +1,10 @@
 body { 
   background-color: var(--bg-color-sec);
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'JetBrains Mono', monospace;
+  color: white;
 }
 
 header {
@@ -92,4 +96,103 @@ header {
   color: rgba(255, 255, 255, 0.7);
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 100%;
+  padding: 0 32px 32px;
+}
 
+.card-translate {
+  display: flex;
+  align-items: flex-start; 
+  width: 100%;
+  max-width: 800px;
+  margin-bottom: 16px;
+}
+
+.play-button {
+  border: none;
+}
+
+.audio-section {
+  flex-shrink: 0;  
+}
+
+.input-section {
+  display: flex;
+  flex-direction: column; 
+  flex-grow: 1; 
+}
+
+.original-text, 
+.translation-input {
+  width: 100%;
+}
+
+.original-text {
+  background-color: var(--color-light-blue);
+  color: var(--text-color-sec);
+  padding: 20px 24px;
+  font-size: 1rem;  
+  margin: 0; 
+}
+
+.translation-input {
+  font-family: var(--font-mono);
+  background-color: var(--color-light-gray);
+  color: var(--text-color-tec);
+  padding: 24px 20px;
+  border: none;
+  font-size: 1rem;
+  width: 100%;
+  color: #333;
+  outline: none;
+  margin: 0; 
+  display: block; 
+}
+
+.controls {
+  display: flex;
+  flex-direction: row; 
+  gap: 32px;     
+  justify-content: center;
+}
+
+.controls button {
+  background-color: #D1D5DB; 
+  color: var(--text-color-pri);
+  border: none;
+  border-radius: 4px;
+  font-family: var(--font-mono);
+  font-style: italic;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.card-hint {
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  height: 64px;
+  max-width: 800px;
+  background-color: var(--color-light-yellow);
+  margin-top: 42px;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.hint-section {
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.hint-text {
+   color: var(--text-color-tec);
+   font-style: italic;
+  font-weight: bold;
+}
